# FastAuth

./: .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  USER_MANAGEMENT.md  comprehensive_example.db  demo.db  install.py  main.py  pyproject.toml  ruff.toml  test.db  user_management_example.db
.github/workflows/: ci-cd.yml  test-setup.yml
examples/: basic_app.py  comprehensive_example.py  user_management_example.py
fastauth/: __init__.py  auth_old.py  database.py  decorators.py  endpoints.py  middleware.py  router.py
fastauth/auth/: __init__.py  auth_manager.py  token_validator.py
fastauth/models/: __init__.py  associations.py  permission.py  role.py  role_permission.py  user.py  user_role.py
fastauth/providers/: __init__.py  auth0_provider.py  base.py  custom_provider.py  factory.py  firebase_provider.py  jwt_provider.py
fastauth/schemas/: __init__.py  associations.py  auth.py  permission.py  role.py  token.py  user.py
