[project]
name = "fastapi-roles-auth"
version = "0.1.2"
description = "A comprehensive FastAPI package for role-based access control with support for multiple auth providers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ton Llucia", email = "tonlls1999@gmail.com"}
]
keywords = ["fastapi", "authentication", "authorization", "rbac", "roles", "permissions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.41",
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.5",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
auth0 = ["auth0-python>=4.9.0"]
firebase = ["firebase-admin>=6.8.0"]
redis = ["redis>=6.1.0"]
sqlite = []  # SQLite is included with Python
postgres = ["psycopg2-binary>=2.9.10"]
mysql = ["pymysql>=1.1.1"]
oracle = ["cx-oracle>=8.3.0"]
mongodb = ["motor>=3.7.1", "pymongo>=4.13.0"]
all-databases = [
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1", 
    "cx-oracle>=8.3.0",
    "motor>=3.7.1",
    "pymongo>=4.13.0"
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.8.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastauth"]


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "auth0.*",
    "firebase_admin.*",
    "redis.*",
    "psycopg2.*",
    "pymysql.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=fastauth --cov-report=term-missing"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "uvicorn>=0.34.2",
]
